Demo properties in src file

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -1,4 +1,5 @@
 ---
 rtemplate: entry.jsx
+title: Static Page Generation with Isomorphic React
 ---
-Server rendered content.
+This is a demo of Isomorphic React. This page loaded from a static HTML file. First write something into the input.
