--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -1,5 +1,5 @@
 ---
-rtemplate: entry.jsx
+rtemplate: Entry.jsx
 title: Static Page Generation with Isomorphic React
 ---
 This is a demo of Isomorphic React. This page loaded from a static HTML file. First write something into the input.
